# smolmath

./: .gitignore  LICENSE  Makefile.am  README.md  ast.c  ast.h  configure.ac  lexer.l  main.c  parser.y
include/: array_kv.h  ast.h  env.h
src/: array_kv.c  ast.c  env.c  lexer.l  main.c  parser.y
